@@ -1,3 +1,10 @@
+2008-11-11  Curtis Gedak  <gedakc@gmail.com>
+
+	* include/FS_Info.h,
+	  include/Makefile.am,
+	  src/FS_Info.cc,
+	  src/Makefile.am:  Created class to read file system UUIDs.
+
 2008-11-10  Curtis Gedak  <gedakc@gmail.com>
 
 	* src/fat16.cc,
